--- a/transcode/ultrafast_mc.properties
+++ b/transcode/ultrafast_mc.properties
@@ -19,7 +19,7 @@
 # If you want to make your own changes, make a copy of this file and edit the copy.
 #===================================================================================================
 
-# OpenDCT Live Transcoding Example Profile for High Performance Computers
+# OpenDCT Live Transcoding for Music Choice Only
 
 # Set this to true to always reload these properties when this transcoding profile is requested.
 # Alternatively these properties are only loaded once.
@@ -27,39 +27,21 @@ g.conf.always_reload=false
 
 # This is the profile name to be displayed. When referencing this profile in opendct.properties, use
 # the name of this file without the .properties extension.
-g.conf.friendly_name=Profile Example
-g.conf.description=Example profile for computers with high performance.
+g.conf.friendly_name=Music Choice Only
+g.conf.description=Transcoding profile that tries to only transcode Music Choice channels.
 
 # Change this value to true to disable transcoding on all capture devices using this profile. This
 # effectively will cause all video streams to be copied instead.
 g.conf.disable=false
 
-# There are some rules used to determine when transcoding is to be used. This is the order in which
-# they are interpreted.
-# 1) If the total of the in progress transcoding weights plus this transcoding weight is less than
-#    or equal to the value of consumer.ffmpeg.transcode_limit => Continue
-# 2) If g.conf.disable=true => Remux
-# 3) If v.conf.t.always=true => Transcode
-# 4) If v.conf.t.transcode_gt_h < video height and v.conf.t.transcode_gt_w < video width => Continue
-# 5) If v.conf.t.transcode_eq_h = video height and v.conf.t.transcode_eq_w = video width => Continue
-# 6) If v.conf.t.codec_map.mpeg2video=libx264 and the source is mpeg2 => Transcode
-# 7) If v.conf.t.deinterlace_only=true and the source is interlaced => Transcode
-# 8) If v.conf.t.progressive_only=true and the source is progressive => Transcode
-
-# If this is set, transcoding can only happen when the video is greater than this height.
-#v.conf.t.allow_gt_h=720
-
-# If this is set, transcoding can only happen when the video is greater than this width.
-#v.conf.t.allow_gt_w=1280
-
 # If this is set, transcoding can only happen when the video equals this height.
-#v.conf.t.allow_eq_h=480
+v.conf.t.allow_eq_h=480
 
 # If this is set, transcoding can only happen when the video equals this width.
-#v.conf.t.allow_eq_w=704
+v.conf.t.allow_eq_w=704
 
 # If this is true, transcoding will only happen if the content is interlaced.
-v.conf.t.deinterlace_only=true
+v.conf.t.deinterlace_only=false
 
 # If this is true, transcoding will only happen if the content is progressive.
 v.conf.t.progressive_only=true
@@ -100,11 +82,11 @@ v.e.default.h264.dict.profile=high
 v.e.default.h264.dict.level=4.1
 
 # Allowed: ultrafast, superfast, veryfast, faster, fast, medium, slow, slower, veryslow, placebo
-v.e.default.h264.dict.preset=veryfast
+v.e.default.h264.dict.preset=ultrafast
 
 # Allowed: film, animation, grain, stillimage, psnr, ssim, fastdecode, zerolatency
 # fastdecode and zerolatency are recommended for smoother transitions during SWITCH.
-#v.e.default.h264.dict.tune=fastdecode,zerolatency
+v.e.default.h264.dict.tune=fastdecode,zerolatency
 
 # 23 is the h264 default. Increase this number for speed (max 51). Decrease it for quality (min 0).
 v.e.default.h264.dict.crf=18
@@ -210,3 +192,6 @@ v.e.default.h264.encode_weight=2
 # All incoming video with a height of 480 typically uses less than half of the resources needed for
 # 1080p30 ot 720p60.
 v.e.w*.h480.h264.encode_weight=1
+
+# Music Choice is assumed to have nearly zero actual resource requirements.
+v.e.w704.h480.h264.encode_weight=0
